# rs485-logger

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  Cross.toml  README.md  config.toml.example  sonar-project.properties
.planning/: DAEMON-RELIABILITY-VERIFICATION.md  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md
.planning/debug/: energy-clear-timeout-second-device.md  energy-reset-sequential-timeout.md  knowledge-base.md
.planning/debug/resolved/: log-level-config-ignored.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/phases/01-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-03-SUMMARY.md
.planning/phases/02-influxdb-integration/: 02-02-SUMMARY.md
.planning/phases/03-modbus-poll-loop/: 03-01-PLAN.md  03-02-PLAN.md  03-02-SUMMARY.md  03-HUMAN-UAT.md  03-VERIFICATION.md
.planning/phases/04-systemd-deployment/: 04-01-PLAN.md  04-02-PLAN.md
.planning/phases/05-create-comprehensive-manual-readme-md-on-how-to-use-this-program-e2e-from-pzem016-wiring-connection-to-raspberry-pi-configuration-start-app-etc/: 05-01-SUMMARY.md
.planning/phases/06-send-command-to-reset-energy-at-the-beginning-of-the-day-00-00-thailand-timezone-observe-file-ct-datasheet-txt-for-instruction/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  (+1 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
deploy/: 99-rs485.rules  build-release.sh  install.sh  rs485-logger.service
src/: config.rs  influx.rs  main.rs  poller.rs  scheduler.rs  types.rs
(+28 files in other folders)
